syntax = "proto3";

package amr;

service AmrGrpcService {
  rpc ReadAmrList(ReadAmrListRequest) returns (ReadAmrListResponse);
  rpc ReadAmr(ReadAmrRequest) returns (ReadAmrResponse);
  rpc ExistsAmr(ExistsAmrRequest) returns (ExistsAmrResponse);
  rpc CreateAmr(CreateAmrRequest) returns (CreateAmrResponse);
  rpc UpdateAmr(UpdateAmrRequest) returns (UpdateAmrResponse);
  rpc DeleteAmr(DeleteAmrRequest) returns (DeleteAmrResponse);
}

message ReadAmrRequest {
  optional string amrSerial = 1;
  optional string amrType = 2;
  optional string amrName = 3;
  optional string amrIpAddress = 4;
  optional string amrUri = 5;
  optional string amrApproveYn = 6;
  optional string createdAt = 7;
  optional string updatedAt = 8;
  optional string createdBy = 9;
  optional string updatedBy = 10;
}

message ExistsAmrRequest {
  string amrSerial = 1;
}

message ReadAmrListRequest {
  optional int32 pageNo = 1;
  optional int32 pageSize = 2;
  optional string searchType = 3;
  optional string searchText = 4;
  optional string amrSerial = 5;
  optional string amrType = 6;
  optional string amrName = 7;
  optional string amrIpAddress = 8;
  optional string amrUri = 9;
  optional string amrApproveYn = 10;
  optional string createdAt = 11;
  optional string updatedAt = 12;
  optional string createdAtStart = 13;
  optional string createdAtEnd = 14;
  optional string updatedAtStart = 15;
  optional string updatedAtEnd = 16;
  optional string createdBy = 17;
  optional string updatedBy = 18;
}

message ReadAmrResponse {
  optional string amrSerial = 1;
  optional string amrType = 2;
  optional string amrName = 3;
  optional string amrIpAddress = 4;
  optional string amrUri = 5;
  optional string amrApproveYn = 6;
  optional string createdAt = 7;
  optional string updatedAt = 8;
  optional string createdBy = 9;
  optional string updatedBy = 10;
}

message ExistsAmrResponse {
  bool exists = 1;
}

message ReadAmrListResponse {
  int32 pageNo = 1;
  int32 pageSize = 2;
  int32 totalCount = 3;
  int32 totalPage = 4;

  repeated Amr data = 5;

  message Amr {
    string amrSerial = 1;
    string amrType = 2;
    string amrName = 3;
    string amrIpAddress = 4;
    string amrUri = 5;
    string amrApproveYn = 6;
    string createdAt = 7;
    string updatedAt = 8;
    string createdBy = 9;
    string updatedBy = 10;
  }
}

message CreateAmrRequest {
  string amrSerial = 1;
  string amrType = 2;
  string amrName = 3;
  optional string amrIpAddress = 4;
  optional string amrUri = 5;
  string amrApproveYn = 6;
  string createdAt = 7;
  optional string createdBy = 8;
}

message CreateAmrResponse {
  string amrSerial = 1;
  string amrType = 2;
  string amrName = 3;
  string amrIpAddress = 4;
  string amrUri = 5;
  string amrApproveYn = 6;
  string createdAt = 7;
  string createdBy = 8;
}

message UpdateAmrRequest {
  string amrSerial = 1;
  optional Amr data = 2;

  message Amr {
    optional string robotSerial = 1;
    optional string amrType = 2;
    optional string amrName = 3;
    optional string amrIpAddress = 4;
    optional string amrUri = 5;
    optional string amrApproveYn = 6;
    optional string updatedAt = 7;
    optional string updatedBy = 8;
  }
}

message UpdateAmrResponse {
  string amrSerial = 1;
  string amrType = 2;
  string amrName = 3;
  string amrIpAddress = 4;
  string amrUri = 5;
  string amrApproveYn = 6;
  string updatedAt = 7;
  string updatedBy = 8;
}

message DeleteAmrRequest {
  string amrSerial = 1;
}

message DeleteAmrResponse {
  string amrSerial = 1;
  string amrType = 2;
  string amrName = 3;
  string amrIpAddress = 4;
  string amrUri = 5;
  string amrApproveYn = 6;
  string createdAt = 7;
  string updatedAt = 8;
  string createdBy = 9;
  string updatedBy = 10;
}